    Closes: #673213.

  [ Michael Biebl ]
  * Stop using a doc symlink for the dbg package. The space savings are
    negligible and they are prone to cause problems. In case of
    python-gobject-dbg, which was converted to a transitional package, the
    symlink was mistakenly converted to a real directory which isn't handled
    nicely by dpkg. Closes: #700779

 -- Michael Biebl <biebl@debian.org>  Thu, 21 Feb 2013 18:23:46 +0100

pygobject (3.2.2-1) unstable; urgency=low

  * New upstream bug fix release.

 -- Martin Pitt <mpitt@debian.org>  Tue, 15 May 2012 15:29:38 +0200

pygobject (3.2.1-1) unstable; urgency=low

  * New upstream bug fix release.
    - GTK overrides: Add missing keyword arguments (Closes: #667057)

 -- Martin Pitt <mpitt@debian.org>  Thu, 10 May 2012 14:27:02 -0700

pygobject (3.2.0-3) unstable; urgency=low

  * debian/control.in, debian/rules: Build a python3-gi-cairo package, now
    that py3cairo is packaged in Debian. (LP: #879405)

 -- Martin Pitt <mpitt@debian.org>  Tue, 10 Apr 2012 13:10:34 +0200

pygobject (3.2.0-2) unstable; urgency=low

  * Upload to unstable.
  * debian/watch: Switch back to only watching for stable versions.
  * debian/control.in: Set Vcs-* back to unstable branch.
  * debian/copyright: Move to copyright 1.0 format.
  * debian/control.in: Bump Standards-Version to 3.9.3.

 -- Martin Pitt <mpitt@debian.org>  Mon, 02 Apr 2012 08:18:17 +0200

pygobject (3.2.0-1) experimental; urgency=low

  * New upstream bug fix release, to fix two regressions in 3.1.92.

 -- Martin Pitt <mpitt@debian.org>  Mon, 26 Mar 2012 13:50:26 +0200

pygobject (3.1.92-1) experimental; urgency=low

  * New upstream release.
    - Fix Gtk override API for tree models to send out only one signal after
      the data is set. (LP: #939450)

 -- Martin Pitt <mpitt@debian.org>  Mon, 19 Mar 2012 17:29:07 +0100

pygobject (3.1.1-1) experimental; urgency=low

  * New upstream bug fix release.