@@ -152,6 +152,8 @@ Description: development headers for GObject Python bindings
  which use pygobject.
 
 Package: python-gobject
+Section: oldlibs
+Priority: extra
 Architecture: all
 Depends: ${misc:Depends},
          python-gi (>= ${source:Version}),
@@ -178,7 +180,7 @@ Description: Python 3 Cairo bindings for the GObject library
  used by other bindings to map their GObjects to Python objects.
 
 Package: python-gobject-dbg
-Section: debug
+Section: oldlibs
 Priority: extra
 Architecture: all
 Depends: ${misc:Depends},
@@ -191,6 +193,8 @@ Description: Python 2.x debugging modules for GObject - transitional package
  You can remove it safely when nothing else depends on it.
 
 Package: python-gobject-dev
+Section: oldlibs
+Priority: extra
 Architecture: all
 Depends: ${misc:Depends},
          python-gi-dev (= ${source:Version}),
