@@ -11,6 +11,7 @@ pygobject (3.2.2-2) unstable; urgency=low
     python-gobject-dbg, which was converted to a transitional package, the
     symlink was mistakenly converted to a real directory which isn't handled
     nicely by dpkg. Closes: #700779
+  * Move transitional packages into section oldlibs with priority extra.
 
  -- Michael Biebl <biebl@debian.org>  Thu, 21 Feb 2013 18:23:46 +0100
 
